--- a/c_a_c_website2017/public_html/css/main.css
+++ b/c_a_c_website2017/public_html/css/main.css
@@ -52,6 +52,8 @@
     width: 100%;
     height: 400px;
     background-color: #ffffff;
+    
+    z-index: 250;
 }
 .mainMenu__projectLink {
     position: absolute;
@@ -60,6 +62,8 @@
     width: 100%;
     height: 400px;
     background-color: #ffffff;
+    
+    z-index: 251;
 }
 .mainMenu__diaryLink {
     position: absolute;
@@ -68,6 +72,8 @@
     width: 100%;
     height: 400px;
     background-color: #ffffff;
+    
+    z-index: 252;
 }
 .mainMenu__discriptionLeft {
     position: absolute;
@@ -75,6 +81,8 @@
     left: 66.6%;
     width: 33.3%;
     height: 400px;
+    
+    z-index: 240;
 }
 .mainMenu__discriptionRight {
     position: absolute;
@@ -82,6 +90,55 @@
     left: 0px;
     width: 33.3%;
     height: 400px;
+    
+    z-index: 240;
+}
+.mainMenu__discriptionLogo {
+    position: absolute;
+    top: 80px;
+    left: 40%;
+    width: 20%;
+    height: 120px;
+    //background-color: #ffffff;
+    background-size: contain;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    z-index: 241;
+}
+.mainMenu__discriptionTitle {
+    position: relative;
+    top: 200px;
+    width: 100%;
+    font-family: "Rounded Mplus 1c";
+    color: #ffffff;
+    font-size: 23px;
+    text-align: center;
+}
+.mainMenu__discriptionSentence {
+    position: relative;
+    top: 210px;
+    width: 100%;
+    font-family: "Rounded Mplus 1c";
+    color: #ffffff;
+    font-size: 15px;
+    text-align: center;
+}
+.mainMenu__discriptionMoreButton {
+    position: relative;
+    top: 230px;
+    width: 120px;
+    height: 35px;
+    font-family: "Rounded Mplus 1c";
+    color: #ffffff;
+    font-size: 17px;
+    line-height: 30px;
+    text-align: center;
+    background-color: rgba(255, 255, 255,0.0);
+    border-radius: 10px;
+    border: 1px;
+    border-style: solid;
+    border-color: white;
+    margin: 0 auto;
 }
 .mainMenu__imageLeft {
     position: absolute;
@@ -92,6 +149,8 @@
     background-color: lightgray;
     background-size: cover;
     background-position: center center;
+    
+    z-index: 239;
 }
 .mainMenu__imageRight {
     position: absolute;
@@ -102,6 +161,8 @@
     background-color: lightgray;
     background-size: cover;
     background-position: center center;
+    
+    z-index: 239;
 }
 .mainMenu__squareLeft {
     position: absolute;
@@ -112,6 +173,8 @@
     transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
+    
+    z-index: 240;
 }
 .mainMenu__squareRight {
     position: absolute;
@@ -122,6 +185,8 @@
     transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
+    
+    z-index: 240;
 }
 
 .mainDiary {
@@ -130,6 +195,7 @@
     left: 0px;
     width: 100%;
     height: 700px;
+    
     z-index: 350;
     
     background-color: #f4f4f4;
@@ -167,12 +233,69 @@
     height: 700px;
     //background-color: red;
 }
-.mainDiary__diary--logo{
-    
-}
 .mainDiary__diary--contents {
-    
+    position: relative;
+    top: 100px;
+    width: 95%;
+    height: 150px;
+    //background-color: red;
+    margin: 0 auto;
+}
+.mainDiary__diary--title {
+    position: absolute;
+    top: 25px;
+    left: 150px;
+    font-family: "Rounded Mplus 1c";
+    color: #545454;
+    font-size: 20px;
+}
+.mainDiary__diary--sentence {
+    position: absolute;
+    top: 60px;
+    left: 150px;
+    font-family: "Rounded Mplus 1c";
+    color: #545454;
+    font-size: 15px;
+}
+.mainDiary__diary--logo{
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    border: 1px;
+    border-style: solid;
+    border-color: #545454;
+}
+.mainDiary__diary--separator {
+    position: absolute;
+    top: 150px;
+    left: 20%;
+    width: 60%;
+    height: 1px;
+    background-color: #9c9c9c;
 }
 .mainDiary__moreButton {
-    
+    position: absolute;
+    top: 600px;
+    left: calc(50% - 60px);
+    width: 120px;
+    height: 35px;
+    font-family: "Rounded Mplus 1c";
+    color: #545454;
+    font-size: 17px;
+    line-height: 30px;
+    text-align: center;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    border: 1px;
+    border-style: solid;
+    border-color: #545454;
+    transition: all 100ms 0s ease;
+    cursor: pointer;
+}
+.mainDiary__moreButton:hover {
+    background-color: #545454;
+    color: #f4f4f4;
 }
