--- a/c_a_c_website2017/public_html/css/header.css
+++ b/c_a_c_website2017/public_html/css/header.css
@@ -5,8 +5,8 @@
 
 .header {
     position: absolute;
-    left: 0px;
     top: 0px;
+    left: 0px;
     width: 100%;
     height: 150px;
     background-color: #ffffff;
@@ -14,7 +14,6 @@
     
     z-index: 500;
 }
-
 .header__cacDiscription {
     position: absolute;
     font-family: "Rounded Mplus 1c";
@@ -27,10 +26,10 @@
 .header__cacLogo {
     position: relative;
     width: 250px;
+    top: 10px;
     height: 100px;
     background-image: url('../img/all/logo01.png');
     background-size: cover;
-    top: 10px;
     margin: 0 auto;
 }
 
@@ -44,5 +43,38 @@
     top: 10px;
 }
 .header__Link:hover {
+    color: #0096ff;
+}
+
+.miniHeader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 50px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+    
+    z-index: 500;
+}
+.miniHeader__cacLogo {
+    position: absolute;
+    width: 125px;
+    height: 50px;
+    top: 0px;
+    left: 0px;
+    background-image: url('../img/all/logo01.png');
+    background-size: cover;
+}
+.miniHeader__Link {
+    position: relative;
+    cursor: pointer;
+    font-family: "Rounded Mplus 1c";
+    color: #545454;
+    font-size: 16px;
+    margin-left: 50px;
+    top: 13px;
+}
+.miniHeader__Link:hover {
     color: #0096ff;
 }
