--- a/c_a_c_website2017/public_html/html/portfolio/components/portfolioMain.css
+++ b/c_a_c_website2017/public_html/html/portfolio/components/portfolioMain.css
@@ -211,14 +211,13 @@ html {
 }
 .showreel--blur:before {
     content: '';
-    background: inherit;/*.bgImageで設定した背景画像を継承する*/
+    background: inherit;
     -webkit-filter: blur(10px);
     -moz-filter: blur(10px);
     -o-filter: blur(10px);
     -ms-filter: blur(10px);
     filter: blur(10px);
     position: absolute;
-    /*ブラー効果で画像の端がボヤけた分だけ位置を調整*/
     top: -10px;
     left: -10px;
     right: -10px;
