30% done creating media page

--- a/c_a_c_website2017/public_html/css/project.css
+++ b/c_a_c_website2017/public_html/css/project.css
@@ -101,7 +101,7 @@ and open the template in the editor.
     font-family: "Rounded Mplus 1c";
     color: white;
     font-size: 15px;
-    width: 100px;//150px
+    width: 100px;
     height: 25px;
     line-height: 25px;
     top: 110px;
