--- a/c_a_c_website2017/public_html/css/media.css
+++ b/c_a_c_website2017/public_html/css/media.css
@@ -19,3 +19,109 @@ and open the template in the editor.
     background-size: cover;
     background-position: center center;
 }
+
+.mediaContents__background {
+    position: absolute;
+    width: 100%;
+    height: calc(245px * 5);
+    left: 0px;
+    top: 230px;
+    background-color: rgba(255, 255, 255, 1.0);
+}
+
+.mediaContents__cell--frame {
+    position: absolute;
+    width: 1000px;
+    height: calc(245px * 5);
+    left: calc(50% - 500px);
+    top: 45px; //305px
+/*    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(55, 55, 55);*/
+}
+
+.mediaContents__cell--base {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 25px;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #dddddd;
+}
+
+.mediaContents__cell--img {
+    position: absolute;
+    width: 260px;
+    height: 200px;
+    top: -1px;
+    left: -1px;
+    background-position: center center;
+    background-size: 100%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #dddddd;
+}
+
+.mediaContents__cell--title {
+    position: relative;
+    width: 720px;
+    left: 270px;
+    top: 10px;
+    font-family: "Rounded Mplus 1c";
+    color: #2d2d2d;
+    font-size: 25px;
+/*    border-style: solid;
+    border-width: 1px;
+    border-color: #dddddd;*/
+}
+
+.mediaContents__cell--discription {
+    position: relative;
+    width: 720px;
+    left: 270px;
+    top: 20px;
+    font-family: "Rounded Mplus 1c";
+    color: #2d2d2d;
+    font-size: 15px;
+/*    border-style: solid;
+    border-width: 1px;
+    border-color: #dddddd;*/
+}
+
+.mediaContents__cell--linkBase {
+    position: absolute;
+    width: 720px;
+    height: 30px;
+    left: 270px;
+    top: 160px;
+}
+
+.mediaContents__cell--link {
+    display: inline-table;
+    width: 150px;
+    height: 30px;
+    margin-right: 5px;
+    
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    background-color: white;
+    
+    font-family: "Rounded Mplus 1c";
+    color: #0096ff;
+    font-size: 14px;
+    text-align: center;
+    line-height: 27px;
+    
+    border-style: solid;
+    border-width: 1px;
+    border-color: #0096ff;
+    
+    transition: background-color ease-in-out 0.2s, color ease-in-out 0.2s;
+}
+.mediaContents__cell--link:hover {
+    background-color: #0096ff;
+    color: white;
+}
