--- a/c_a_c_website2017/public_html/css/diary.css
+++ b/c_a_c_website2017/public_html/css/diary.css
@@ -19,3 +19,43 @@ and open the template in the editor.
     background-size: cover;
     background-position: center center;
 }
+
+
+
+
+
+/*each diary*/
+.eachDiaryBackgroundImage--main {
+    position: absolute;
+    background-size: cover;
+    width: 495px;
+    height: 380px;
+    top: 50px;
+}
+
+.eachDiaryBackgroundImage--back {
+    position: absolute;
+    background-size: cover;
+    background-position: center center;
+    width: calc(100% + 20px);
+    height: 200px;
+    top: 40px;
+    left: -10px;
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(10px);
+    -o-filter: blur(10px);
+    -ms-filter: blur(10px);
+    filter: blur(10px);
+    z-index: 0;
+}
+
+.eachDiaryContents--back {
+    position: relative;
+    background-color: white;
+    width: calc(100% + 15px);
+    top: 230px;
+    left: -8px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(55, 55, 55);
+}
