--- a/c_a_c_website2017/public_html/css/diary.css
+++ b/c_a_c_website2017/public_html/css/diary.css
@@ -52,10 +52,126 @@ and open the template in the editor.
 .eachDiaryContents--back {
     position: relative;
     background-color: white;
-    width: calc(100% + 15px);
+    width: calc(100% + 16px);
     top: 230px;
-    left: -8px;
-    border-style: solid;
+    left: -4px;
+}
+
+.eachDiaryContents--frame {
+    position: relative;
+    width: 1000px;
+    left: calc(50% - 500px);
+    top: 0px;
+/*    border-style: solid;
     border-width: 1px;
-    border-color: rgb(55, 55, 55);
+    border-color: rgb(55, 55, 55);*/
+}
+
+.eachDiaryContents--month {
+    position: relative;
+    display: inline-block;
+    margin-top: 45px;
+    font-family: 'Architects Daughter', cursive;
+    font-size: 40px;
+    color: #545454;
+}
+
+.eachDiaryContents--dateAndYear {
+    position: relative;
+    left: -8px;
+    font-family: 'Architects Daughter', cursive;
+    font-size: 17px;
+    color: #545454;
+}
+
+.eachDiaryContents--prevPost {
+    position: relative;
+    width: 100%;
+    display: inline-block;
+    text-align: left;
+    font-family: "Noto Sans Japanese";
+    font-size: 16px;
+    font-weight: 300;
+    color: #0096ff;
+/*    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(55, 55, 55);*/
+}
+.eachDiaryContents--nextPost {
+    position: relative;
+    width: 100%;
+    display: inline-block;
+    text-align: right;
+    font-family: "Noto Sans Japanese";
+    font-size: 16px;
+    font-weight: 300;
+    color: #0096ff;
+    margin-bottom: 45px;
+/*    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(55, 55, 55);*/
+}
+
+h1 {
+    display: inline;
+    position: relative;
+    left: 20px;
+    font-family: "Noto Sans Japanese";
+    font-weight: 500;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+    color: #545454;
+    font-size: 35px;
+}
+
+h2 {
+    padding: 0.25em 0.5em;
+    font-family: "Noto Sans Japanese";
+    font-size: 20px;
+    font-weight: 500;
+    color: #494949;
+    margin-top: 30px;
+    margin-bottom: -10px;
+    background: transparent;
+    border-left: solid 10px #0096ff;
+}
+
+h3 {
+    position: relative;
+    padding-left: 1.2em;/*アイコン分のスペース*/
+    line-height: 1.4;
+    font-family: "Noto Sans Japanese";
+    font-size: 18px;
+    font-weight: 600;
+    color: #494949;
+    margin-bottom: -10px;
+}
+h3:before{
+    font-family: FontAwesome;
+    content: "・";
+    position: absolute;
+    font-size: 1em;
+    left: 0;
+    top: 0;
+    color: #0096ff
+}
+
+p {
+    font-family: "Noto Sans Japanese";
+    font-size: 16px;
+    color: #494949;
+}
+
+hr.eachDiary {
+    position: relative;
+    top: -20px;
+    border-top: 1px dashed #8c8b8b;
+    border-bottom: 1px dashed #fff;
+}
+
+img {
+    position: relative;
+    width: 60%;
+    margin: 20px;
+    left: 20%;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.8);
 }
