--- a/c_a_c_website2017/public_html/css/about.css
+++ b/c_a_c_website2017/public_html/css/about.css
@@ -20,7 +20,7 @@ and open the template in the editor.
 }
 
 .aboutHeadSentence {
-    position: absolute;
+    position: relative;
     top: 230px;
     left: 0px;
     width: 100%;
@@ -29,9 +29,13 @@ and open the template in the editor.
     text-align: center;
 }
 
+.aboutDiscription {
+    
+}
+
 .aboutProfile {
-    position: absolute;
-    top: 830px;
+    position: relative;
+    top: 0px;
     left: 0px;
     width: 100%;
     height: 1000px;
@@ -68,7 +72,7 @@ and open the template in the editor.
     left: 0px;
     width: 100%;
     height: 900px;
-    //background-color: blue;
+    /*background-color: blue;*/
 }
 .aboutProfile__information__leftField {
     position: absolute;
@@ -76,7 +80,7 @@ and open the template in the editor.
     left: calc(50% - 500px);
     width: 500px;
     height: 850px;
-    //background-color: gray;
+    /*background-color: gray;*/
 }
 .aboutProfile__information__rightField {
     position: absolute;
@@ -84,14 +88,14 @@ and open the template in the editor.
     left: 50%;
     width: 500px;
     height: 850px;
-    //background-color: lightgray;
+    /*background-color: lightgray;*/
 }
 .aboutProfile__information--cell {
     position: relative;
     top: 0px;
     left: 0px;
     width: 100%;
-    //background-color: gray;
+    /*background-color: gray;*/
 }
 .aboutProfile__information--title {
     position: absolute;
@@ -112,7 +116,7 @@ and open the template in the editor.
     color: #545454;
     font-size: 16px;
     text-align: left;
-    //background-color: blue;
+    /*background-color: blue;*/
 }
 
 .aboutProfile__information--separator{
