--- a/c_a_c_website2017/public_html/css/futter.css
+++ b/c_a_c_website2017/public_html/css/futter.css
@@ -4,7 +4,8 @@
 */
 
 .futter {
-    position: absolute;
+    position: relative;
+    top: 0px;
     left: 0px;
     width: 100%;
     height: 200px;
@@ -19,8 +20,8 @@
 }
 
 .futter__contents {
-    position: absolute;
-    //border: white solid 1px;
+    position: relative;
+    /*border: white solid 1px;*/
     width: 1000px;
     height: 130px;
     left: calc(50% - 500px);
