--- a/c_a_c_website2017/public_html/css/header.css
+++ b/c_a_c_website2017/public_html/css/header.css
@@ -3,15 +3,22 @@
     Author     : okamoto
 */
 
+body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td	{
+    margin: 0;
+    padding: 0;
+}
+
 .header {
-    position: absolute;
+    position: relative;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 150px;
+    margin: 0;
+    padding: 0;
     background-color: #ffffff;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    
+     
     z-index: 500;
 }
 .header__cacDiscription {
