--- a/c_a_c_website2017/public_html/css/main.css
+++ b/c_a_c_website2017/public_html/css/main.css
@@ -8,8 +8,8 @@ a {
 }
 
 .mainTitle {
-    position: absolute;
-    top: 150px;
+    position: relative;
+    top: 0px;
     left: 0px;
     width: 100%;
     height: 550px;
@@ -39,8 +39,8 @@ a {
 }
 
 .mainMenu {
-    position: absolute;
-    top: 700px;
+    position: relative;
+    top: 0px;
     left: 0px;
     width: 100%;
     height: 1200px;
@@ -106,7 +106,7 @@ a {
     background-position: bottom center;
     background-repeat: no-repeat;
     z-index: 241;
-    //background-color: #ffffff;
+    /*background-color: #ffffff;*/
 }
 .mainMenu__discriptionTitle {
     position: relative;
@@ -193,8 +193,8 @@ a {
 }
 
 .mainDiary {
-    position: absolute;
-    top: 1900px;
+    position: relative;
+    top: 0px;
     left: 0px;
     width: 100%;
     height: 700px;
@@ -234,14 +234,14 @@ a {
     left: 0px;
     width: 50%;
     height: 700px;
-    //background-color: red;
+    /*background-color: red;*/
 }
 .mainDiary__diary--contents {
     position: relative;
     top: 100px;
     width: 95%;
     height: 150px;
-    //background-color: red;
+    /*background-color: red;*/
     margin: 0 auto;
 }
 .mainDiary__diary--title {
@@ -280,6 +280,13 @@ a {
     height: 1px;
     background-color: #c2c2c2;
 }
+.mainDiary__twitter--contents {
+    position: absolute;
+    top: 110px;
+    left: 10%;
+    width: 80%;
+    /*background-color: red;*/
+}
 .mainDiary__moreButton {
     position: absolute;
     top: 600px;
@@ -305,9 +312,9 @@ a {
 }
 
 .subPageHeader {
-    position: absolute;
+    position: relative;
     width: 100%;
-    height: 180px;
+    /*height: 180px;*/
     left: 0px;
     top: 50px;
     text-align: center;
@@ -319,13 +326,13 @@ a {
     font-family: "Noto Sans Japanese";
     font-weight: 500;
     font-size: 45px;
-    margin: 0 auto;
 }
 
 .subPageSentence {
     position: relative;
-    top: 40px;
+    top: 50px;
     font-family: "Rounded Mplus 1c";
     font-weight: 400;
     font-size: 17px;
+    padding-bottom: 150px;
 }
