--- a/c_a_c_website2017/public_html/css/project.css
+++ b/c_a_c_website2017/public_html/css/project.css
@@ -23,11 +23,11 @@ and open the template in the editor.
 
 
 .projectContents__background {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 1550px;
+    top: 0px;
     left: 0px;
-    top: 230px;
     background-color: rgba(255, 255, 255, 1.0);
 /*    border-style: solid;
     border-width: 1px;
@@ -54,8 +54,8 @@ and open the template in the editor.
     border-style: solid;
     border-width: 1px;
     border-color: #dddddd;
-    //left: calc(50% - 500px);
-    //top: calc(0 * 440px);
+    /*left: calc(50% - 500px);*/
+    /*top: calc(0 * 440px);*/
 }
 
 .projectContents__cell--img {
