--- a/c_a_c_website2017/public_html/css/header.css
+++ b/c_a_c_website2017/public_html/css/header.css
@@ -3,7 +3,33 @@
     Author     : okamoto
 */
 
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td	{
+ul {
+    list-style-type: none
+}
+
+body,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
+form,
+fieldset,
+input,
+textarea,
+p,
+blockquote,
+th,
+td {
     margin: 0;
     padding: 0;
 }
@@ -17,10 +43,10 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
     margin: 0;
     padding: 0;
     background-color: #ffffff;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-     
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     z-index: 500;
 }
+
 .header__cacDiscription {
     position: absolute;
     font-family: "Rounded Mplus 1c";
@@ -49,6 +75,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
     margin-left: 50px;
     top: 10px;
 }
+
 .header__Link:hover {
     color: #0096ff;
 }
@@ -60,10 +87,10 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
     width: 100%;
     height: 50px;
     background-color: #ffffff;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     z-index: 500;
 }
+
 .miniHeader__cacLogo {
     position: absolute;
     width: 125px;
@@ -73,6 +100,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
     background-image: url('../img/all/logo01.png');
     background-size: cover;
 }
+
 .miniHeader__Link {
     position: relative;
     cursor: pointer;
@@ -82,6 +110,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
     margin-left: 50px;
     top: 13px;
 }
+
 .miniHeader__Link:hover {
     color: #0096ff;
 }
