--- a/c_a_c_website2017/public_html/css/project.css
+++ b/c_a_c_website2017/public_html/css/project.css
@@ -1,8 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
 /* 
     Created on : 2017/05/28, 22:23:27
     Author     : okamoto
@@ -25,47 +20,63 @@ and open the template in the editor.
 .projectContents__background {
     position: relative;
     width: 100%;
-    height: 1550px;
     top: 0px;
     left: 0px;
     background-color: rgba(255, 255, 255, 1.0);
-/*    border-style: solid;
+    border-style: solid;
     border-width: 1px;
-    border-color: rgb(55, 55, 55);*/
+    border-color: white;
 }
 
+
 .projectContents__background--frame {
-    position: absolute;
+    position: relative;
     width: 1000px;
-    height: 1000px;
+    top: 20px;;
     left: calc(50% - 500px);
-    top: 73px;
-/*    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(55, 55, 55);*/
+}
+@media screen and (max-width: 1000px) {
+    .projectContents__background--frame {
+        width: 95%;
+        left: 5%;
+    }
 }
 
 .projectContents__cell--base {
     background-color: white;
-    position: absolute;
+    display: inline-block;
+    position: relative;
     width: 300px;
     height: 300px;
     text-align: center;
+    margin: 13px;
     border-style: solid;
     border-width: 1px;
     border-color: #dddddd;
-    /*left: calc(50% - 500px);*/
-    /*top: calc(0 * 440px);*/
+}
+@media screen and (max-width: 1000px) {
+    .projectContents__cell--base {
+        width: 45%;
+        margin: 5px;
+    }
+}
+@media screen and (max-width: 750px) {
+    .projectContents__cell--base {
+        width: 95%;
+        left: 0px;
+        margin: 0px;
+        text-align: left;
+    }
 }
 
 .projectContents__cell--img {
     background-size: 100%;
     background-color: rgb(255, 255, 255);
     background-position: center center;
-    position: absolute;
+    position: relative;
     left: 0px;
-    top: 0px;
-    width: 300px;
+    top: -25px;
+    width: 100%;
     height: 230px;
     z-index: 100;
 }
@@ -73,10 +84,10 @@ and open the template in the editor.
     background-size: 100%;
     background-color: rgb(255, 255, 255);
     background-position: center center;
-    position: absolute;
+    position: relative;
     left: 0px;
     top: 0px;
-    width: 300px;
+    width: 100%;
     height: 230px;
     overflow: hidden;
     z-index: 98;
@@ -97,7 +108,7 @@ and open the template in the editor.
 }
 
 .projectContents__cell--readMoreButton {
-    position: absolute;
+    position: relative;
     font-family: "Rounded Mplus 1c";
     color: white;
     font-size: 15px;
@@ -105,7 +116,8 @@ and open the template in the editor.
     height: 25px;
     line-height: 25px;
     top: 110px;
-    left: 75px; 
+    left: calc(50% - 75px);
+    text-align: center;
     border-radius: 13px;
     -webkit-border-radius: 13px;
     -moz-border-radius: 13px;
@@ -118,28 +130,39 @@ and open the template in the editor.
 }
 
 .projectContents__cell--title {
-    margin-top: 240px;
+    position: relative;
+    margin-top: 5px;
     font-family: "Rounded Mplus 1c";
     color: #2d2d2d;
     font-size: 25px;
     z-index: 100;
 }
+@media screen and (max-width: 750px) {
+    .projectContents__cell--title {
+        margin-left: 20px;
+    }
+}
 .projectContents__cell--discription {
+    position: relative;
     margin-top: -5px;
     font-family: "Rounded Mplus 1c";
     color: #2d2d2d;
     font-size: 15px;
     z-index: 100;
 }
+@media screen and (max-width: 750px) {
+    .projectContents__cell--discription {
+        margin-left: 20px;
+    }
+}
 
 .projectContents__pageMenu--frame {
-    position: absolute;
-    top: 1380px;
+    position: relative;
+    /*top: 1380px;*/
     width: 100%;
+    margin-top: 30px;
+    margin-bottom: 50px;
     text-align: center;
-/*    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(55, 55, 55);*/
 }
 
 .projectContents__pageMenu--back {
@@ -147,9 +170,6 @@ and open the template in the editor.
     top: 0px;
     height: 50px;
     margin: 0 auto;
-/*    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(55, 55, 55);*/
 }
 
 .projectContents__pageMenu--cellSquare {
@@ -162,7 +182,6 @@ and open the template in the editor.
     font-family: "Rounded Mplus 1c";
     text-align: center;
     vertical-align: middle;
-    cursor: pointer;
     color: #2d2d2d;
     font-size: 16px;
     border-style: solid;
@@ -184,7 +203,6 @@ and open the template in the editor.
     font-family: "Rounded Mplus 1c";
     text-align: center;
     vertical-align: middle;
-    cursor: pointer;
     color: #2d2d2d;
     font-size: 16px;
     border-style: solid;
@@ -198,7 +216,7 @@ and open the template in the editor.
 .projectContents__pageMenu--cellRecNotButton {
     display: table-cell;
     position: relative;
-    background-color: rgba(0, 160, 233, 1.0);
+    background-color: rgba(180, 180, 180, 1.0);
     width: 70px;
     height: 50px;
     margin-left: 10px;
