--- a/c_a_c_website2017/public_html/css/announce.css
+++ b/c_a_c_website2017/public_html/css/announce.css
@@ -19,3 +19,24 @@ and open the template in the editor.
     background-size: cover;
     background-position: center center;
 }
+
+.announce__background {
+    position: relative;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    padding-bottom: calc(100% - 590px);
+    background-color: #ffffff;
+    text-align: center;
+}
+
+.announce__noCongtentsMessage--frame {
+    position: relative;
+    top: 100px;
+    left: 0px;
+    font-family: "Rounded Mplus 1c";
+    color: #8c8b8b;
+/*    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(55, 55, 55);*/
+}
