--- a/C.A.C.Web/css/project.css
+++ b/C.A.C.Web/css/project.css
@@ -49,6 +49,7 @@
     width: 300px;
     height: 300px;
     text-align: center;
+    text-decoration:none;
     margin: 13px;
     border-style: solid;
     border-width: 1px;
